refactor : test name 수정